[package]
name = "psbt-multisig-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
bitcoin = { version = "0.31.1", features = ["rand", "rand-std", "serde"] }
btc-transaction-utils = "0.9.0"
psbt-v2 = "0.1.1"